<resources>
    <string name="app_name">NAVM Books</string>
    <string name="logo_desc">App Logo</string>

    <string name="welcome_image_desc">Welcome image</string>
    <string name="welcome_title">Welcome to NAVMBooks</string>
    <string name="welcome_description">Discover, read, and enjoy our library of books!</string>
    <string name="get_started">Get Started</string>
    <string name="app_description">Explore a curated library of free textbooks, tables, and images beautifully displayed in a book-like layout.</string>
    <string name="team_members">Team Members:</string>
    <string name="team_names">Mohammad Mahbub Rahman, Aman Sood, Noah Gélinas, Vinson Chiu</string>

    <string name="search_book">Search Book</string>
    <string name="enter_keyword">Enter Keyword</string>
    <string name="click_to_navigate">Click on the paragraph to navigate</string>
    <string name="resume_reading">Resume Reading</string>
    <string name="reset_reading">Reset Reading</string>

    <string name="home">Home</string>
    <string name="library">Library</string>
    <string name="search">Search</string>
    <string name="content">Content</string>
    <string name="reading">Read</string>

    <string name="home_screen" translatable="false">home_screen</string>
    <string name="library_screen" translatable="false">library_screen</string>
    <string name="search_screen" translatable="false">search_screen</string>
    <string name="content_screen" translatable="false">content_screen</string>
...
    <string-array name="DownloadedBooksCover">
        <item>Download/DownloadedFiles/pg74757-h/images/cover.jpg</item>
        <item>Download/DownloadedFiles/pg20195-h/20195-cover.png</item>
        <item>Download/DownloadedFiles/pg8710-h/images/cover.jpg</item>
    </string-array>
    <string-array name="DownloadedBooksTitle">
        <item>Viennese Medley</item>
        <item>Wood-Block Printing</item>
        <item>THE DORE GALLERY OF BIBLE ILLUSTRATIONS</item>
    </string-array>
</resources>
