...
                        stringResource(R.string.reading_label),
                        modifier = Modifier.padding(end = dimensionResource(R.dimen.small_padding))
                    )
                    Switch(
                        checked = bookViewModel.isReadingMode.value,
                        onCheckedChange = { bookViewModel.toggleReadingMode(it) },
                        Modifier.testTag("ReadingSwitch")
                    )
                }
            }

            LazyRow(
                modifier = Modifier
...
                modifier = Modifier
                    .fillMaxWidth()
                    .padding(dimensionResource(R.dimen.medium_padding)),
                horizontalArrangement = Arrangement.SpaceBetween
            ) {
                Button(
                    modifier = modifier.testTag("Previous"),
                    onClick = {
                        navController.navigate(
                            NavRoutes.ReadingScreen.createRoute(
                                bookIndex,
                                chapter.chapNum - 2
                            )
...
                        contentColor = colorScheme.primary
                    ),
                ) {
                    Text(stringResource(R.string.previous_chapter))
                }
                Button(
                    modifier = modifier.testTag("Next"),
                    onClick = {
                        navController.navigate(
                            NavRoutes.ReadingScreen.createRoute(
                                bookIndex,
                                chapter.chapNum
                            )
...
